--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,17 +1,15 @@
-/* *{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
+  }  
 body{
     background-color: purple;
     padding: 50px;
     padding-top: 0;
-    /* width: 100%;
+    width: 100%;
     height: 100vh;
-    background-color: purple;
-    padding: 50px;
-    padding-top: 0; */
+  
 }
 .navigation_bar{
     background-color: purple;
@@ -29,7 +27,7 @@ body{
     color: white;
 }
 .navigation_bar a{
-    color: black;
+    color: #ea6cea;
     text-decoration: none;
 }
 a {
