--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,31 +1,8 @@
+ 
+body{
+    background-color: purple;
+}
 
-a {
-    color: black;
-    text-decoration: none;
-}
-a:hover {
-    color: white;
-}
-.main_nav_bar p{
-    font-size: 20px;
-    color: black;
-}
-.main_nav_bar h2{
-    color: white;
-    font-size: 60px;
-}
-.other_nav_bars{
-    padding-top: 10px;
-    float: right;
-    font-size: 17px;
-}
-.other_nav_bars ul{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 80px;
-    font-weight: 200;
-    list-style: none;
-}
 .container{
     position: relative;
     display: flex;
@@ -35,9 +12,9 @@ a:hover {
     height: 90%;
     padding-left: 10px;
     padding: 20px 40px;
-    /* background: url("./contact_filebgdi.png");
+    background: url("./contact_filebgdi.png");
     background-position: center;
-    background-size: cover; */
+    background-size: cover;
 }
 .container:after{
     content: '';
@@ -79,7 +56,7 @@ h2{
     margin-bottom: 10px;
     color: black;
 }
-/* h2:after{
+h2:after{
     content: '';
     position: absolute;
     left: 50%;
@@ -89,7 +66,7 @@ h2{
     width: 50px;
     border-radius: 2px;
     background-color: black;
-} */
+}
 .field{
     width: 100%;
     padding: 0.5rem 1rem;
