--- a/src/css/about.css
+++ b/src/css/about.css
@@ -6,7 +6,7 @@ header nav ul a {
   color: black;
 }
 main{
-  height: 100svh;
+  min-height: 80svh;
   margin: 2rem;
 }
 /* Main Grid Container Styles */
