--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,63 +1,50 @@
 body {
   background-color: white;
+  color:black;
 }
-/* added a little section for the nav-bar area so the font color is visible and made the about me highlighted */
+
 header nav ul a {
   color: black;
 }
-main{
-  min-height: 80svh;
-  margin: 2rem;
-}
-/* Main Grid Container Styles */
+
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two equal columns */
-  gap: 1rem; /* Space between columns */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
   padding: 1rem;
-  justify-items: center; /* Center items in their respective grid areas */
+  margin-bottom: 6rem;
 }
-
-/* Slider Container Styles */
-.slider-container {
-  overflow: hidden; /* Prevent overflow of the images */
-  width: 300px; /* Fixed width for the slider */  
-  display: flex; /* Use flexbox to center content */
-  justify-content: center; /* Center the slider inside the container */
-  box-shadow: -8px -8px 8px purple, 8px -8px 8px purple, -8px 8px 8px purple,
-  8px 8px 8px purple;;
-}
-
-.slider {
-  max-width:300px;
-  display: flex; /* Arrange slides in a row */
-  margin: 0 auto;
-  transition: transform 0.5s ease-in-out; /* Smooth transition for the slide effect */
-}
-
-.slide {
-  width: 300px; /* Set fixed width for images */
-  height: 400px; /* Set fixed height for images */
-  object-fit: cover; /* Ensure the image covers the entire box */
-}
-
 
 .meet-me {
-  text-align: left; /* Align text to the left */
+  text-align: left;
   padding: 1rem;
   max-width: 90ch;
 }
+
 .meet-me p {
   font-size: var(--clamp-regular-text);
-  margin: 1rem;
-  text-indent: 10px;
 }
 
 .meet-me h2 {
-  color: white;
-  font-size: var(--clamp-h2);
-  font-style: italic;
-  text-shadow: -8px -8px 8px purple, 8px -8px 8px purple, -8px 8px 8px purple,
-    8px 8px 8px purple;
-  margin: 1rem;
+  color: purple;
+  text-shadow: -8px -8px 8px purple, 8px 8px 8px purple;
+}
+
+.slider-container {
+  max-width: 300px; /* Maximum width */
+  width: 100%; /* Allows the slider to use the full width of its parent */
+  overflow: hidden;
+  position: relative;
+  margin: auto; /* Centers the slider */
+}
+
+
+.slider {
+  display: flex; /* Enables horizontal scrolling of slides */
+  transition: transform 0.5s ease; /* Smooth transitions for sliding effect */
+}
+
+.slide {
+  min-width: 100%; /* Each slide takes full width of the slider */
+  transition: opacity 1s ease; /* Smooth fade effect for slides */
 }
