--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,24 +1,24 @@
 footer {
-   
-   padding: 1rem;
-   text-align: center;
- }
- 
- .contact {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   gap: .45rem;
- }
- 
- .contact a {
-   font-size: var(--clamp-regular-text);
-   margin: .5rem;
-   color: var(--hover-color);
-   padding: .3rem;
-   border: 1px solid var(--hover-color);
-   width: 3rem;
-   text-align: center;
-   transition: all .4s ease-in-out;
- }
+  padding: 1rem;
+  text-align: center;
+}
 
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.45rem;
+}
+
+.contact a {
+  font-size: var(--clamp-regular-text);
+  color: var(--hover-color);
+  border: 1px solid var(--hover-color);
+  width: 3rem;
+}
+
+.contact a:hover {
+  color: #ff69b4; /* Pink hover */
+  border-color: #ff69b4;
+  transform: scale(1.2); /* Slight zoom-in */
+}
